--- a/lighttpd.yaml
+++ b/lighttpd.yaml
@@ -51,9 +51,9 @@
       path: /var/www/
       state: directory
       mode: '0775'
-      owner: "{{ web_user }}"
-      group: "{{ web_group }}"
-- name: "create a index file"
+      owner: "web_user"
+      group: "web_group"
+- name: "create an index and a config file"
   shell -a echo '<html> <body> <h1> This is a website </h1></body></html>' > /var/www/index.hmtl
   shell -a echo {{"server.modules = (
         "mod_indexfile",
