--- a/lighttpd.yaml
+++ b/lighttpd.yaml
@@ -57,7 +57,7 @@
 - name: "create an index and a config file"
   shell -a echo '<html> <body> <h1> This is a website </h1></body></html>' > /var/www/index.hmtl
  
-  - name: set httpd config mode
+  - name: "set httpd config mode"
     template:
       src: /etc/lighttpd/lighttpd.conf
       dest: /etc/lighttpd/lighttpd.conf
