--- a/lighttpd.yaml
+++ b/lighttpd.yaml
@@ -59,8 +59,8 @@
  
   - name: "set httpd config mode"
     template:
-      src: /etc/lighttpd/lighttpd.conf
-      dest: /etc/lighttpd/lighttpd.conf
+      src: "/etc/lighttpd/lighttpd.conf"
+      dest: "/etc/lighttpd/lighttpd.conf"
       owner: root
       group: root
       mode: '0644'
