--- a/lighttpd.yaml
+++ b/lighttpd.yaml
@@ -64,7 +64,7 @@
   #    owner: root
   #    group: root
   #    mode: '0644'
-    notify: restart lighttpd
+  #  notify: restart lighttpd
 
   handlers:
     - name: restart lighttpd
