--- a/lighttpd.yaml
+++ b/lighttpd.yaml
@@ -40,7 +40,7 @@
 
   - name: "create www directory"
     file:
-      path: /var/www/html
+      path: /var/www/
       state: directory
       mode: '0775'
       owner: "web_user"
