--- a/lighttpd.yaml
+++ b/lighttpd.yaml
@@ -47,7 +47,8 @@
   #    group: "web_group"
 
   - name: "create an index and a config file"
-    shell: -a echo '<html> <body> <h1> This is a website </h1></body></html>' > /var/www/index.hmtl
+    shell: echo | '<html> <body> <h1> This is a website </h1></body></html>' > /var/www/index.hmtl
+    
  
   #- name: "set httpd config mode"
   #  template:
