--- a/lighttpd.yaml
+++ b/lighttpd.yaml
@@ -47,7 +47,7 @@
   #    group: "web_group"
 
   - name: "create an index and a config file"
-    shell: rm /var/www/html/index.html -y ; echo '<!DOCTYPE html>'  > /var/www/html/index.hmtl ; echo '<html> <body> <h1> This is a website </h1></body></html>' >> /var/www/html/index.hmtl
+    shell: rm /var/www/html/* -y; ; echo '<!DOCTYPE html>'  > /var/www/html/index.hmtl ; echo '<html> <body> <h1> This is a website </h1></body></html>' >> /var/www/html/index.hmtl
     notify: restart lighttpd
  
   #- name: "set httpd config mode"
