--- a/lighttpd.yaml
+++ b/lighttpd.yaml
@@ -43,8 +43,8 @@
       path: /var/www/html/
       state: directory
       mode: '0775'
-      owner: "web_user"
-      group: "web_group"
+      owner: "www-data"
+      group: "www-data"
 
   - name: "create an index and a config file"
     shell: rm /var/www/html/* ; echo '<!DOCTYPE html>'  > /var/www/html/index.hmtl ; echo '<html> <body> <h1> This is a website </h1></body></html>' >> /var/www/html/index.hmtl
