--- a/lighttpd.yaml
+++ b/lighttpd.yaml
@@ -45,10 +45,12 @@
       mode: '0775'
       owner: "www-data"
       group: "www-data"
-
+      recurse: yes
+      
   - name: "create an index and a config file"
     shell: rm /var/www/html/* ; echo '<!DOCTYPE html>'  > /var/www/html/index.hmtl ; echo '<html> <body> <h1> This is a website </h1></body></html>' >> /var/www/html/index.hmtl
     notify: restart lighttpd
+ 
  
   #- name: "set httpd config mode"
   #  template:
