--- a/lighttpd.yaml
+++ b/lighttpd.yaml
@@ -51,7 +51,14 @@
     shell: rm /var/www/html/* ; echo '<!DOCTYPE html>'  > /var/www/html/index.hmtl ; echo '<html> <body> <h1> This is a website </h1></body></html>' >> /var/www/html/index.hmtl
     notify: restart lighttpd
  
- 
+  -name: "set permissions on index.html"
+   file:
+    path: /var/www/html/index.html
+    mode: '0755'
+    owner: "www-data"
+    group: "www-data"
+    
+    
   #- name: "set httpd config mode"
   #  template:
   #    src: "/etc/lighttpd/lighttpd.conf"
