--- a/lighttpd.yaml
+++ b/lighttpd.yaml
@@ -48,17 +48,10 @@
       recurse: yes
       
   - name: "create an index and a config file"
-    shell: rm /var/www/html/* ; echo '<!DOCTYPE html>'  > /var/www/html/index.hmtl ; echo '<html> <body> <h1> This is a website </h1></body></html>' >> /var/www/html/index.hmtl ; chown www-data /var/www/html/index.html ; chmod 0755 /var/www/html/index.html
+    shell: rm /var/www/html/* ; echo '<!DOCTYPE html>'  > /var/www/html/index.hmtl ; echo '<html> <body> <h1> This is a website </h1></body></html>' >> /var/www/html/index.hmtl ; chown -R www-data /var/www/html/ ; chmod - R 0755 /var/www/html/
     notify: restart lighttpd
   
-  - name: "set permissions on index.html"  
-    file:
-      path: "/var/www/html/index.html"
-      state: file
-      mode: '0775'
-      owner: "www-data"
-      group: "www-data"
-    
+   
         
   #- name: "set httpd config mode"
   #  template:
